--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/elijahcraig45/mlb_pi#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "fs": "^0.0.1-security",
     "pg": "^8.11.3"
   }
 }
