--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mlb_pi",
+  "name": "mlb_bq",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bqapp.js",
   "scripts": {
+    "start": "node bqapp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/elijahcraig45/mlb_pi#readme",
   "dependencies": {
+    "@google-cloud/bigquery": "^7.7.0",
+    "@google-cloud/storage": "^7.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
