--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "mlb_bq",
-  "version": "1.0.0",
-  "description": "",
-  "main": "bqapp.js",
+  "name": "hanks-tank-backend",
+  "version": "2.0.0",
+  "description": "MLB Analytics Backend API using MLB StatsAPI",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node bqapp.js",
+    "start": "node dist/app.js",
+    "dev": "npx tsc && node dist/app.js",
+    "build": "npx tsc",
+    "build:watch": "npx tsc --watch",
+    "serve": "npm run build && npm start",
+    "clean": "rm -rf dist",
+    "type-check": "npx tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,12 +25,20 @@
   },
   "homepage": "https://github.com/elijahcraig45/mlb_pi#readme",
   "dependencies": {
-    "@google-cloud/bigquery": "^7.7.0",
-    "@google-cloud/storage": "^7.11.1",
+    "@google-cloud/bigquery": "^7.9.4",
+    "@google-cloud/storage": "^7.17.0",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.19.1",
     "fs": "^0.0.1-security",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.3.0",
+    "typescript": "^5.9.2"
   }
 }
