--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,16 @@ NODE_ENV=development
 PORT=3000
 
 # Google Cloud Platform Configuration
-GCP_PROJECT_ID=mlb-414201
-USE_DEFAULT_GCP_CREDENTIALS=false
+GCP_PROJECT_ID=hankstank
+USE_DEFAULT_GCP_CREDENTIALS=true
 
 # BigQuery Configuration  
-BQ_DATASET=MLB_data
-BQ_LOCATION=us-east1
+BQ_DATASET=mlb_historical_data
+BQ_LOCATION=US
 BQ_JOB_TIMEOUT=30000
 
 # Cloud Storage Configuration
-GCS_BUCKET_NAME=mlb_henry
+GCS_BUCKET_NAME=hanks_tank_data
 GCS_BASE_FOLDER=
 
 # Data Source Configuration
