feat: Complete backend modernization with hybrid data architecture
🚀 Major Features:
- Hybrid data architecture with intelligent routing between BigQuery, MLB API, and FanGraphs
- Google Cloud App Engine deployment with auto-scaling
- TypeScript implementation with full type safety
- Backward compatibility layer for existing frontend

📊 Data Integration:
- BigQuery historical data (2015-2024) with 35,000+ records
- FanGraphs API for advanced analytics and Statcast data
- MLB API for real-time data and current season statistics
- Comprehensive data collection scripts with incremental updates

🏗️ Infrastructure:
- Production deployment at https://hankstank.uc.r.appspot.com
- App Engine configuration with Node.js 22 runtime
- Automated build pipeline with gcp-build scripts
- Environment-based configuration management

🔧 Technical Improvements:
- Express.js server with CORS and request logging
- Intelligent data source selection based on request parameters
- Error handling and fallback mechanisms
- Structured logging with Winston
- Comprehensive API documentation

🛠️ Code Organization:
- Modular service architecture with data-source, fangraphs, and legacy controllers
- Clean separation of concerns between routes, controllers, and services
- TypeScript interfaces and type definitions
- Deployment scripts and configuration files

✅ Deployment Verified:
- Production service responding at all endpoints
- Health checks passing
- API compatibility maintained with existing frontend
- Performance optimized with caching and efficient data routing

This implementation provides a scalable, maintainable backend that serves as the foundation for advanced MLB analytics while maintaining full backward compatibility.

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "npx tsc && node dist/app.js",
-    "build": "npx tsc",
+    "build": "npx tsc --project tsconfig.json",
+    "gcp-build": "npx tsc",
     "build:watch": "npx tsc --watch",
     "serve": "npm run build && npm start",
     "clean": "rm -rf dist",
     "type-check": "npx tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run build && gcloud app deploy --quiet",
+    "deploy:prod": "npm run build && gcloud app deploy --promote --quiet",
+    "gcp:logs": "gcloud app logs tail -s default",
+    "gcp:browse": "gcloud app browse"
   },
   "repository": {
     "type": "git",
@@ -27,6 +32,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^7.9.4",
     "@google-cloud/storage": "^7.17.0",
+    "@types/axios": "^0.9.36",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
