--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ MLB_API_BASE_URL=https://statsapi.mlb.com/api/v1
 MLB_API_TIMEOUT=5000
 MLB_API_RETRIES=3
 
+# News API Configuration
+NEWS_API_KEY=your_news_api_key_here
+NEWS_API_BASE_URL=https://newsapi.org/v2
+NEWS_FETCH_SCHEDULE=0 8,20 * * *  # Cron pattern for 8 AM and 8 PM daily
+
 # Cache Configuration (Redis)
 REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
