--- a/.env.production
+++ b/.env.production
@@ -28,6 +28,11 @@ CACHE_TTL_STATS=3600
 FANGRAPHS_BASE_URL=https://www.fangraphs.com/api
 STATCAST_BASE_URL=https://baseballsavant.mlb.com/statcast_search
 
+# News API Configuration
+NEWS_API_KEY=
+NEWS_API_BASE_URL=https://newsapi.org/v2
+NEWS_FETCH_SCHEDULE=0 8,20 * * *
+
 # Performance Settings
 REQUEST_TIMEOUT=30000
 MAX_CONCURRENT_REQUESTS=100
