--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@google-cloud/bigquery": "^7.9.4",
     "@google-cloud/storage": "^7.17.0",
     "@types/axios": "^0.9.36",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.1",
     "fs": "^0.0.1-security",
+    "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "winston": "^3.17.0"
   },
