--- a/.env.production
+++ b/.env.production
@@ -29,7 +29,7 @@ FANGRAPHS_BASE_URL=https://www.fangraphs.com/api
 STATCAST_BASE_URL=https://baseballsavant.mlb.com/statcast_search
 
 # News API Configuration
-NEWS_API_KEY=
+NEWS_API_KEY=3e5d2f278e6241659dbe9464f9b141d7
 NEWS_API_BASE_URL=https://newsapi.org/v2
 NEWS_FETCH_SCHEDULE=0 8,20 * * *
 
