--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,8 @@ env_variables:
   GCP_PROJECT_ID: hankstank
   GCP_BUCKET_NAME: hanks_tank_data
   BQ_DATASET: mlb_historical_data
+  NEWS_API_KEY: 3e5d2f278e6241659dbe9464f9b141d7
+  NEWS_API_BASE_URL: https://newsapi.org/v2
 
 handlers:
 - url: /.*
