--- a/.env.production
+++ b/.env.production
@@ -33,6 +33,9 @@ NEWS_API_KEY=3e5d2f278e6241659dbe9464f9b141d7
 NEWS_API_BASE_URL=https://newsapi.org/v2
 NEWS_FETCH_SCHEDULE=0 8,20 * * *
 
+# CORS Configuration
+CORS_ORIGIN=https://frontend-dot-hankstank.uc.r.appspot.com,http://localhost:3000,http://localhost:3001
+
 # Performance Settings
 REQUEST_TIMEOUT=30000
 MAX_CONCURRENT_REQUESTS=100
