--- a/app.yaml
+++ b/app.yaml
@@ -17,6 +17,7 @@ env_variables:
   USE_DEFAULT_GCP_CREDENTIALS: true
   NEWS_API_KEY: 3e5d2f278e6241659dbe9464f9b141d7
   NEWS_API_BASE_URL: https://newsapi.org/v2
+  CORS_ORIGIN: https://frontend-dot-hankstank.uc.r.appspot.com,http://localhost:3000,http://localhost:3001
 
 handlers:
 - url: /.*
