🚀 2026 Season Update - Production Deployment
Backend Enhancements:
- Enhanced GCP configuration with dynamic season support
- Updated environment configuration for 2026 season
- Added season range validation (2015-2026)
- Improved deployment scripts with explicit project flag
- Optimized cache TTL settings (15min for current season)

Configuration Updates:
- CURRENT_SEASON: 2026
- MIN_SEASON: 2015
- MAX_SEASON: 2026
- Enhanced gcp.config.ts with season range support

Files Modified:
- .env.example (2026 season configuration)
- app.yaml (production env vars for 2026)
- package.json (deployment scripts with --project flag)
- src/config/gcp.config.ts (dynamic season detection)

🌐 Live Deployment:
Backend API: https://hankstank.uc.r.appspot.com
Health Check: https://hankstank.uc.r.appspot.com/health
API Endpoints: /api/team-batting, /api/player-batting, /api/standings

Version: 2.0.0 (2026 Season Ready)
Deployed: December 9, 2025 ⚾

--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,14 @@ GCS_BUCKET_NAME=hanks_tank_data
 GCS_BASE_FOLDER=
 
 # Data Source Configuration
+CURRENT_SEASON=2026
+MIN_SEASON=2015
+MAX_SEASON=2026
 HISTORICAL_DATA_CUTOFF=2
 
 # Cache TTL Settings (in seconds)
 CACHE_TTL_HISTORICAL=86400    # 24 hours for historical data
-CACHE_TTL_CURRENT=1800        # 30 minutes for current season data
+CACHE_TTL_CURRENT=900         # 15 minutes for current season data
 CACHE_TTL_LIVE=600            # 10 minutes for live data (standings, schedules)
 
 # MLB API Configuration
