--- a/app.yaml
+++ b/app.yaml
@@ -15,6 +15,9 @@ env_variables:
   GCP_BUCKET_NAME: hanks_tank_data
   BQ_DATASET: mlb_historical_data
   USE_DEFAULT_GCP_CREDENTIALS: true
+  CURRENT_SEASON: 2026
+  MIN_SEASON: 2015
+  MAX_SEASON: 2026
   NEWS_API_KEY: 3e5d2f278e6241659dbe9464f9b141d7
   NEWS_API_BASE_URL: https://newsapi.org/v2
   CORS_ORIGIN: https://frontend-dot-hankstank.uc.r.appspot.com,http://localhost:3000,http://localhost:3001
