--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "serve": "npm run build && npm start",
     "clean": "rm -rf dist",
     "type-check": "npx tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "deploy": "npm run build && gcloud app deploy --quiet --project=hankstank",
     "deploy:prod": "npm run build && gcloud app deploy --promote --quiet --project=hankstank",
     "gcp:logs": "gcloud app logs tail -s default --project=hankstank",
@@ -47,7 +49,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^24.3.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.9.2"
   }
 }
