--- a/local_data_processing/requirements.txt
+++ b/local_data_processing/requirements.txt
@@ -1,4 +1,6 @@
-pybaseball>=2.2.7
+requests>=2.31.0
 google-cloud-bigquery>=3.11.0
 pandas>=2.0.0
-numpy>=1.24.0
+pyarrow>=14.0.0
+db-dtypes>=1.2.0
+urllib3>=2.1.0
