--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^7.9.4",
     "@google-cloud/storage": "^7.17.0",
+    "@google-cloud/tasks": "^6.2.1",
     "@types/axios": "^0.9.36",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.11.0",
