feat: Add transactions system with BigQuery integration
- Add transactions service, controller, and routes
- Add historical data collection script (2015-2025)
- Add BigQuery sync with chunked inserts (5000 rows/batch)
- Add GitHub Actions workflow for build and deploy
- Update gitignore for temp files and logs
- Add transactions API documentation

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,23 @@ dist
 
 # npm registry config (use global settings)
 .npmrc
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Local data processing temp files
+local_data_processing/*.log
+local_data_processing/*.pid
+
+# Deployment logs
+deploy*.log
+
+# BigQuery service account keys (keep schema files)
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!jest.config.js
+!jest.config.json
+!scripts/bigquery/*.json
